fix bottom nav jumping on mobile virtual keyboards

--- a/app/shared/bottom-nav.component.css
+++ b/app/shared/bottom-nav.component.css
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   width: 100vw;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
 }
